--- a/src/main/resources/fxml/ForgotPassword.fxml
+++ b/src/main/resources/fxml/ForgotPassword.fxml
@@ -5,114 +5,193 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.0" spacing="26.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
+<GridPane prefHeight="735.0" prefWidth="502.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" percentHeight="11.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="44.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="37.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Label alignment="TOP_CENTER" style="-fx-border-color: Black;" text="Forgot PASSWORD">
-         <font>
-            <Font name="Bell MT Bold" size="48.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </Label>
-      <HBox prefHeight="53.0" prefWidth="510.0" />
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <Label prefHeight="36.0" prefWidth="348.0" text="Sequrity Question :">
+            <Label alignment="TOP_CENTER" style="-fx-border-color: Black;" text="Forgot PASSWORD">
                <font>
-                  <Font name="Bell MT Bold" size="30.0" />
+                  <Font name="Bell MT Bold" size="48.0" />
                </font>
-               <HBox.margin>
-                  <Insets left="20.0" top="3.0" />
-               </HBox.margin>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </Label>
          </children>
-      </HBox>
-      <HBox fx:id="questionTextArea" alignment="CENTER" prefHeight="40.0" prefWidth="510.0" spacing="65.0">
+      </VBox>
+      <GridPane alignment="CENTER" prefHeight="308.0" prefWidth="442.0" GridPane.rowIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints />
+            <RowConstraints minHeight="10.0" percentHeight="19.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="23.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="18.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <TextArea prefHeight="40.0" prefWidth="483.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="510.0" GridPane.rowIndex="2">
+               <children>
+                  <Label prefHeight="36.0" prefWidth="266.0" text="Sequrity Question :">
+                     <font>
+                        <Font name="Bell MT Bold" size="30.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox fx:id="questionTextArea" alignment="CENTER" prefHeight="40.0" prefWidth="510.0" spacing="65.0" GridPane.rowIndex="4">
+               <children>
+                  <TextArea prefHeight="47.0" prefWidth="530.0" style="-fx-background-color: Gray;">
+                     <HBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </HBox.margin>
+                  </TextArea>
+               </children>
+            </HBox>
+            <GridPane prefHeight="78.0" prefWidth="510.0" GridPane.rowIndex="6">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="27.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="113.0" prefWidth="232.0">
+                     <children>
+                        <Label text="Answer :">
+                           <font>
+                              <Font name="Bell MT Bold" size="28.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </HBox>
+                  <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets right="20.0" />
+                     </GridPane.margin>
+                  </TextField>
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0" GridPane.rowIndex="8">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#Check" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Check">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+      </GridPane>
+      <GridPane GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="56.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="17.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label text="Answer :">
-               <font>
-                  <Font name="Bell MT Bold" size="30.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="48.0" />
-               </HBox.margin>
-            </TextField>
+            <GridPane prefHeight="153.0" prefWidth="502.0" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="38.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="NewPasswordLabel" text="New Password :">
+                           <font>
+                              <Font name="Bell MT Bold" size="23.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="63.0" prefWidth="191.0" GridPane.rowIndex="3">
+                     <children>
+                        <Label fx:id="checkPasswordLabel" text="Check Password :">
+                           <font>
+                              <Font name="Bell MT Bold" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <TextField fx:id="newPasswordTextField" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets right="20.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="checkPasswordTextField" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets right="20.0" />
+                     </GridPane.margin>
+                  </TextField>
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0" GridPane.rowIndex="3">
+               <children>
+                  <Button fx:id="SignInButton" mnemonicParsing="false" onAction="#SignIn" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Sign In">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="13.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <Label prefHeight="45.0" prefWidth="251.0" style="-fx-background-color: pink; -fx-border-color: Black;" text="Change Password">
+                     <font>
+                        <Font name="Bell MT Italic" size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#Check" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Check">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets right="13.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
-         <children>
-            <Label fx:id="NewPasswordLabel" text="New Password :">
-               <font>
-                  <Font name="Bell MT Bold" size="23.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="newPasswordTextField" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="5.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
-         <children>
-            <Label fx:id="checkPasswordLabel" text="Check Password :">
-               <font>
-                  <Font name="Bell MT Bold" size="20.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="checkPasswordTextField" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0">
-         <children>
-            <Button fx:id="SignInButton" mnemonicParsing="false" onAction="#SignIn" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Sign In">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets right="13.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="20.0" prefWidth="510.0">
+      </GridPane>
+      <HBox alignment="BOTTOM_LEFT" prefHeight="20.0" prefWidth="510.0" GridPane.rowIndex="3">
          <children>
             <Button alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Red; -fx-background-radius: 30;" text="Back" textAlignment="CENTER">
                <font>
@@ -125,4 +204,4 @@
          </children>
       </HBox>
    </children>
-</VBox>
+</GridPane>
