--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -3,21 +3,34 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
-   <left>
-      <VBox prefHeight="200.0" prefWidth="635.0" BorderPane.alignment="CENTER">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="55.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="45.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+      <GridPane gridLinesVisible="true" style="-fx-background-color: #18ADD0FF;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" percentHeight="43.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="100.0" spacing="10.0">
-               <padding>
-                  <Insets left="100.0" top="40.0" />
-               </padding>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                <children>
                   <Label prefHeight="77.0" prefWidth="503.0" text="Sharif Twitter Project">
                      <font>
@@ -34,7 +47,7 @@
                         <Font name="Bell MT" size="30.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="35.0" prefWidth="302.0" text="   Seyed Hamid Ghasemi">
+                  <Label prefHeight="35.0" prefWidth="308.0" text="    Seyed Hamid Ghasemi">
                      <font>
                         <Font name="Bell MT" size="30.0" />
                      </font>
@@ -45,15 +58,8 @@
                      </font>
                   </Label>
                </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
             </VBox>
-            <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Separator>
-            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="100.0" spacing="25.0">
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="25.0" GridPane.rowIndex="1">
                <padding>
                   <Insets left="30.0" right="30.0" />
                </padding>
@@ -63,35 +69,49 @@
                         <Font name="Bell MT Bold" size="36.0" />
                      </font>
                   </Label>
-                  <HBox prefHeight="39.0" prefWidth="452.0">
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="24.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="76.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <Label prefHeight="41.0" prefWidth="125.0" text="ID ">
-                           <font>
-                              <Font name="Bell MT" size="30.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </Label>
-                        <TextField fx:id="idTextField" prefHeight="36.0" prefWidth="320.0" />
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label prefHeight="35.0" prefWidth="52.0" text="ID ">
+                                 <font>
+                                    <Font name="Bell MT" size="30.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                           <children>
+                              <TextField fx:id="idTextField" prefHeight="36.0" prefWidth="320.0" style="-fx-background-radius: 50;" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                           <children>
+                              <Label prefHeight="41.0" prefWidth="125.0" text="Password">
+                                 <font>
+                                    <Font name="Bell MT" size="30.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <TextField fx:id="passwordTextField" prefHeight="41.0" prefWidth="319.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </HBox>
-                  <HBox prefHeight="41.0" prefWidth="452.0">
-                     <children>
-                        <Label prefHeight="41.0" prefWidth="125.0" text="Password">
-                           <font>
-                              <Font name="Bell MT" size="30.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="passwordTextField" prefHeight="41.0" prefWidth="319.0" />
-                     </children>
-                  </HBox>
+                  </GridPane>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#signUp" prefHeight="39.0" prefWidth="86.0" style="-fx-background-color: Blue;" text="SignUp" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#signUp" prefHeight="39.0" prefWidth="86.0" style="-fx-background-color: Purple;" text="SignUp" textFill="WHITE">
                            <HBox.margin>
                               <Insets right="150.0" />
                            </HBox.margin>
@@ -118,15 +138,8 @@
                      </children>
                   </HBox>
                </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
             </VBox>
-            <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Separator>
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowIndex="2">
                <children>
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#exit" prefHeight="36.0" prefWidth="73.0" style="-fx-background-color: Red;" text="Exit" textAlignment="CENTER">
                      <font>
@@ -134,24 +147,16 @@
                      </font>
                   </Button>
                </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
             </HBox>
          </children>
-      </VBox>
-   </left>
-   <right>
-      <VBox fx:id="right" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: Black;" BorderPane.alignment="CENTER">
-         <children>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="736.0" prefWidth="510.4" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </VBox>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin></VBox>
-   </right>
-</BorderPane>
+      </GridPane>
+      <GridPane fx:id="right" style="-fx-background-color: bLACK;" GridPane.columnIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+   </children>
+</GridPane>
