--- a/src/main/resources/fxml/SignUp.fxml
+++ b/src/main/resources/fxml/SignUp.fxml
@@ -4,155 +4,214 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.4" spacing="26.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignUpController">
+<GridPane prefHeight="734.4" prefWidth="502.34" style="-fx-background-color: Pink;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignUpController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" percentHeight="12.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" percentHeight="70.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Label alignment="TOP_CENTER" style="-fx-border-color: Black;" text="Sign Up">
-         <font>
-            <Font name="Bell MT" size="64.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </Label>
-      <HBox prefHeight="53.0" prefWidth="510.0" />
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+      <HBox alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="126.0" prefWidth="502.0">
          <children>
-            <Label text="User Name :">
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" style="-fx-border-color: Black;" text="Sign Up">
                <font>
-                  <Font name="Bell MT Bold" size="30.0" />
+                  <Font name="Bell MT" size="64.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets top="10.0" />
                </HBox.margin>
             </Label>
-            <TextField fx:id="UserName" prefHeight="40.0" prefWidth="307.0" style="-fx-background-radius: 50;" />
          </children>
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="65.0">
+      <GridPane alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="451.0" prefWidth="502.0" GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="35.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.69" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.69" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.69" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.69" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.69" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="4.5" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="7.690000000000001" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label text="ID :">
-               <font>
-                  <Font name="Bell MT Bold" size="30.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="ID" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="57.0" />
-               </HBox.margin>
+            <TextField fx:id="UserName" prefHeight="40.0" prefWidth="307.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
             </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
-         <children>
-            <Label text="Password :">
-               <font>
-                  <Font name="Bell MT Bold" size="30.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="password1" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="21.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
-         <children>
-            <Label text="Check Password :">
-               <font>
-                  <Font name="Bell MT Bold" size="20.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="checkPassword" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
+            <HBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="176.0">
+               <children>
+                  <Label prefHeight="36.0" prefWidth="200.0" text="User Name :">
+                     <font>
+                        <Font name="Bell MT Bold" size="26.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </Label>
+               </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="74.0" prefWidth="78.0" GridPane.rowIndex="2">
+               <children>
+                  <Label text="ID :">
+                     <font>
+                        <Font name="Bell MT Bold" size="27.0" />
+                     </font>
+                  </Label>
+               </children>
+               <GridPane.margin>
                   <Insets left="10.0" />
-               </HBox.margin>
+               </GridPane.margin>
+            </HBox>
+            <TextField fx:id="ID" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
+               <children>
+                  <Label text="Password :">
+                     <font>
+                        <Font name="Bell MT Bold" size="28.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="password1" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="6">
+               <children>
+                  <Label text="Check Password :">
+                     <font>
+                        <Font name="Bell MT Bold" size="21.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="checkPassword" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="8">
+               <children>
+                  <Label text="Password Hint :">
+                     <font>
+                        <Font name="Bell MT Bold" size="23.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="passwordHint" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="10">
+               <children>
+                  <Label text="Security Question :">
+                     <font>
+                        <Font name="Bell MT Bold" size="19.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="question" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="10">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="12">
+               <children>
+                  <Label text="Answer :">
+                     <font>
+                        <Font name="Bell MT Bold" size="30.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0" style="-fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="12">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
             </TextField>
          </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0">
+      </GridPane>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0" GridPane.rowIndex="4">
          <children>
-            <Label text="Password Hint :">
-               <font>
-                  <Font name="Bell MT Bold" size="24.0" />
-               </font>
+            <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="104.0" prefWidth="506.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Red; -fx-background-radius: 30;" text="Back">
+                     <font>
+                        <Font name="Bell MT" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets />
                </HBox.margin>
-            </Label>
-            <TextField fx:id="passwordHint" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="5.0" />
-               </HBox.margin>
-            </TextField>
+            </HBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0">
+      <HBox alignment="BOTTOM_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
          <children>
-            <Label text="Security Question :">
-               <font>
-                  <Font name="Bell MT Bold" size="20.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="question" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="4.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
-         <children>
-            <Label text="Answer :">
-               <font>
-                  <Font name="Bell MT Bold" size="30.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0">
-               <HBox.margin>
-                  <Insets left="48.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="281.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Red; -fx-background-radius: 30;" text="Back">
-               <font>
-                  <Font name="Bell MT" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets bottom="6.0" top="62.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#SignUp" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="SignUp">
+            <Button mnemonicParsing="false" onAction="#SignUp" prefHeight="40.0" prefWidth="86.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="SignUp">
                <font>
                   <Font size="18.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin>
             </Button>
          </children>
+         <GridPane.margin>
+            <Insets right="20.0" />
+         </GridPane.margin>
       </HBox>
    </children>
-</VBox>
+</GridPane>
